# typlatform

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Kconfig  Makefile  README.md  idf_component.yml
cmake/: extensions.cmake
cmake/platform/: esp.cmake  posix.cmake  zephyr.cmake
include/tiny/: error.h  instance.h  log.hpp  logging.h  platform.h  tiny-core-config.h
include/tinyplatform/: error.h  instance.h  logging.h  platform.h  toolchain.h
include/ty/: error.h  exit_code.h  instance.h  (+4 more)
make/: espidf-54.mk  makefile-doc.awk  makefile.mk  zephyr-410.mk
platform/: esp.cmake  posix.cmake  zephyr.cmake
src/: CMakeLists.txt  tinyplatform-config.h  typlatform-config.h
src/common/: arg_macros.hpp  code_utils.hpp  error.cpp  exit_code.c  new.hpp  non_copyable.hpp  string.cpp  string.hpp
src/esp/: CMakeLists.txt  logging.c  platform-esp.h  platform.c  tinyplatform-esp-config.h
src/instance/: instance.cpp  instance.hpp
src/logging/: log.cpp  logging.cpp
src/platform/: logging.h
src/platform/esp/: CMakeLists.txt  logging.c  misc.c  platform-esp.h  thread.c  ty-esp-config.h
src/platform/posix/: CMakeLists.txt  exit_code.c  logging.c  misc.cpp  platform-posix.h  platform.c  thread.cpp  ty-posix-config.h
src/platform/zephyr/: CMakeLists.txt  logging.c  misc.c  platform-zephyr.h  platform.c  thread.c  ty-zephyr-config.h
src/posix/: CMakeLists.txt  logging.c  platform-posix.h  platform.c  tinyplatform-posix-config.h
src/zephyr/: CMakeLists.txt  logging.c  platform-zephyr.h  platform.c  tinyplatform-zephyr-config.h
zephyr/: module.yml
(+55 files in other folders)
